--- a/index.fr.htm
+++ b/index.fr.htm
@@ -1,72 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Content-Language" content="fr" />
-    <link rel="stylesheet" type="text/css" href="s.css" />
-    <title>Mehdi Bouaziz - École normale supérieure</title>
-  </head>
-  <body class="generic">
-    <div class="otherlangs">
-      <ul>
-        <li>
-          <a href="index.en.htm" rel="alternate" hreflang="en" xml:lang="en" lang="en">English version</a>
-        </li>
-      </ul>
-    </div>
-    <div class="page">
-      <div class="content">
-        <h1>Mehdi Bouaziz</h1>
-        <p>Je suis en thèse avec <a href="http://www.di.ens.fr/~feret" class="people">Jérôme Feret</a> et <a href="http://www.di.ens.fr/~cousot" class="people">Patrick Cousot</a>, dans l'<a href="http://www.di.ens.fr/~cousot/Equipeabsint-fr.shtml" class="place">équipe Abstraction</a> du <a href="http://www.di.ens.fr" class="place">Département d'Informatique</a> de l'<a href="http://www.ens.fr" class="place">École normale supérieure</a> à Paris. Je travaille sur l'analyse statique de propriétés de sécurité par interprétation abstraite.</p>
-        <p>Avant cela, j'étais <a href="http://www.ens.fr" class="place">normalien</a> (2007 – 2012).
-J'ai fait des stages de recherche à <a href="http://research.microsoft.com" class="place">Microsoft Research</a> à Redmond, WA, avec <a href="http://research.microsoft.com/en-us/people/logozzo/" class="people">Francesco Logozzo</a> (2011, 2012) et avec <a href="http://research.microsoft.com/en-us/people/ellab/" class="people">Ella Bounimova</a> (2011) ; au <a href="http://www.cs.stevens.edu" class="place">Stevens Institute of Technology</a> à Hoboken, NJ, avec <a href="http://www.cs.stevens.edu/~naumann/" class="people">David Naumann</a> (2010) ; à l'<a href="http://www.di.ens.fr" class="place">École normale supérieure</a> à Paris, avec <a href="http://www.di.ens.fr/~mine/" class="people">Antoine Miné</a> (2010) ; et à <a href="http://www.mlstate.com" class="place">MLstate</a> à Édimbourg (2009) et Paris (2008).
-J'ai été médaillé de bronze (2004, Athènes, Grèce) et d'or (2005, Nowy Sącz, Pologne) aux Olympiades internationales d'informatique (<a href="http://www.ioinformatics.org">IOI</a>), et de bronze (2005, Sárospatak, Hongrie) aux Olympiades d'informatique d'Europe Centrale (<a href="http://ceoi.inf.elte.hu">CEOI</a>), ainsi que finaliste (2010, Harbin, Chine) du Concours international inter-universitaire de programmation (<a href="http://cm.baylor.edu">ACM-ICPC</a>).
-</p>
-        <p class="more">
-          <a href="me.fr.htm">▶ Plus</a>
-        </p>
-        <h2>Recherche</h2>
-        <p>Mes recherches portent sur les langages de programmation et leur sémantique, l'analyse statique, l'interprétation abstraite et la sécurité informatique.</p>
-        <h3>Dernières publications</h3>
-        <p><a href="http://research.microsoft.com/en-us/people/mbarnett/" class="people">Michael Barnett</a>, Mehdi Bouaziz, <a href="http://www.linkedin.com/pub/manuel-fahndrich/2/427/47" class="people">Manuel Fähndrich</a> et <a href="http://research.microsoft.com/en-us/people/logozzo/" class="people">Francesco Logozzo</a>, <a href="p/BarnettBouazizFahndrichLogozzo-Bytecode13.fr.htm">A case for static analyzers in the cloud</a>, in <i><a href="http://costa.ls.fi.upm.es/bytecode13/">8th Workshop on Bytecode Semantics, Verification, Analysis, and Transformation (Bytecode 2013)</a></i>, mars 2013. <a href="p/BarnettBouazizFahndrichLogozzo-Bytecode13.pdf">[Article]</a><a href="p/BarnettBouazizFahndrichLogozzo-Bytecode13-slides.pdf">[Transparents]</a></p>
-        <p>Mehdi Bouaziz, <a href="http://research.microsoft.com/en-us/people/logozzo/" class="people">Francesco Logozzo</a> et <a href="http://www.linkedin.com/pub/manuel-fahndrich/2/427/47" class="people">Manuel Fähndrich</a>, <a href="p/BouazizLogozzoFahndrich-APLAS12.fr.htm">Inference of Necessary Field Conditions with Abstract Interpretation</a>, in <i><a href="http://aplas12.kuis.kyoto-u.ac.jp/">10th Asian Symposium on Programming Languages and Systems (APLAS 2012)</a></i>, <a href="http://www.springer.com">Springer</a>, décembre 2012. <a href="p/BouazizLogozzoFahndrich-APLAS12.pdf">[Article]</a><a href="p/BouazizLogozzoFahndrich-APLAS12-slides.pdf">[Transparents]</a></p>
-        <p>Mehdi Bouaziz, <a href="p/Bouaziz-NSAD12.fr.htm"><tt>TreeKs</tt>: A Functor to Make Numerical Abstract Domains Scalable</a>, in <i><a href="http://nsad2012.ucombinator.org/">4th International Workshop on Numerical and Symbolic Abstract Domains (NSAD 2012)</a></i>, <a href="http://www.elsevier.com/">Elsevier</a>, 17 septembre 2012. <a href="p/Bouaziz-NSAD12.pdf">[Article]</a><a href="p/Bouaziz-NSAD12-slides.pdf">[Transparents]</a></p>
-        <p class="more">
-          <a href="pubs.fr.htm">▶ Plus</a>
-        </p>
-        <h3>Derniers exposés</h3>
-        <p><a href="p/Bouaziz-ECNU13-talk.fr.htm">CodeContracts &amp; Clousot</a>.
-  <i>Course on Abstract Interpretation</i>, <a href="http://french.ecnu.edu.cn" class="place">École normale supérieure de l'Est de la Chine</a>, Shanghai, Chine. 26 novembre 2013.
-  </p>
-        <p><a href="p/Bouaziz-AVDCPS13-talk.fr.htm">Scalable Numerical Abstact Domains</a>.
-  <i>2nd Workshop on Analysis and Verification of Dependable Cyber Physical Software (AVDCPS 2013)</i>, <a href="http://english.nudt.edu.cn" class="place">National University of Defense Technology</a>, Changsha, Chine. 23 novembre 2013.
-  <a href="p/Bouaziz-AVDCPS13-slides.pdf">[Transparents]</a></p>
-        <p><a href="p/LogozzoBouaziz-FMF2-talk.fr.htm">Spécification et vérification de programmes avec CodeContracts</a>.
-  <i><a href="http://projects.laas.fr/IFSE/FMF/J2">2<sup>e</sup> Forum méthodes formelles (FMF 2013)</a></i>, <a href="http://www.laas.fr" class="place">Laboratoire d'Analyse et d'Architecture des Systèmes</a>, Toulouse, France. 28 juin 2013.
-  <a href="p/LogozzoBouaziz-FMF2-slides.pdf">[Transparents]</a></p>
-        <p class="more">
-          <a href="talks.fr.htm">▶ Plus</a>
-        </p>
-        <h2>Contact</h2>
-        <p>Email : <tt><i>prénom</i>.<i>nom</i>@ens.fr</tt></p>
-        <p>
-          <a href="mehdi-bouaziz.asc">Ma clé publique gpg</a>
-        </p>
-        <h3>Adresse</h3>
-        <p>
-Équipe Abstraction<br />
-Hauts du DI, escalier Direction<br />
-École normale supérieure<br />
-45 rue d'Ulm<br />
-75005 Paris<br />
-France</p>
-        <p class="more">
-          <a href="contact.fr.htm">▶ Plus</a>
-        </p>
-        <p class="footer center"><a href="index.fr.htm">Accueil</a> | <a href="contact.fr.htm">Contact</a> | <a href="sitemap.fr.htm">Plan du site</a></p>
-        <p class="center" id="lastupdate">Dernière mise à jour : 24 janvier 2014</p>
-      </div>
-    </div>
-  </body>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; URL=index.html">
+    <link rel="canonical" href="index.html">
+    <title>Redirection - Mehdi Bouaziz</title>
+</head>
+<body>
+    <h1>Redirection</h1>
+    <p>Vous allez être redirigé vers la version anglaise du site. Si cela ne fonctionne pas automatiquement, <a href="index.html">cliquez ici</a>.</p>
+    <script>
+        window.location.href = "index.html";
+    </script>
+</body>
 </html>
