--- a/index.htm
+++ b/index.htm
@@ -1,72 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Content-Language" content="en" />
-    <link rel="stylesheet" type="text/css" href="s.css" />
-    <title>Mehdi Bouaziz - École normale supérieure</title>
-  </head>
-  <body class="generic">
-    <div class="otherlangs">
-      <ul>
-        <li>
-          <a href="index.fr.htm" rel="alternate" hreflang="fr" xml:lang="fr" lang="fr">Version française</a>
-        </li>
-      </ul>
-    </div>
-    <div class="page">
-      <div class="content">
-        <h1>Mehdi Bouaziz</h1>
-        <p>I am a PhD student under the joint supervision of <a href="http://www.di.ens.fr/~feret" class="people">Jérôme Feret</a> and <a href="http://www.di.ens.fr/~cousot" class="people">Patrick Cousot</a>, in the <a href="http://www.di.ens.fr/~cousot/Equipeabsint-eg.shtml" class="place">team Abstraction</a> of the <a href="http://www.di.ens.fr" class="place">Computer Science department</a> of the <a href="http://www.ens.fr" class="place">École normale supérieure</a> in Paris. I am working on static analysis of security properties by abstract interpretation.</p>
-        <p>Previously, I was a <i>normalien</i> student of the <a href="http://www.ens.fr" class="place">École normale supérieure</a> (2007 – 2012).
-I had been a research intern at <a href="http://research.microsoft.com" class="place">Microsoft Research</a>, Redmond, WA, with <a href="http://research.microsoft.com/en-us/people/logozzo/" class="people">Francesco Logozzo</a> (2011, 2012) and with <a href="http://research.microsoft.com/en-us/people/ellab/" class="people">Ella Bounimova</a> (2011); at the <a href="http://www.cs.stevens.edu" class="place">Stevens Institute of Technology</a>, Hoboken, NJ, with <a href="http://www.cs.stevens.edu/~naumann/" class="people">David Naumann</a> (2010); at the <a href="http://www.di.ens.fr" class="place">École normale supérieure</a>, Paris, with <a href="http://www.di.ens.fr/~mine/index.html.en" class="people">Antoine Miné</a> (2010); and at <a href="http://www.mlstate.com" class="place">MLstate</a>, Edinburgh (2009) and Paris (2008).
-I was a bronze medalist (2004, Athens, Greece) and a gold medalist (2005, Nowy Sącz, Poland) at the International Olympiads in Informatics (<a href="http://www.ioinformatics.org">IOI</a>), and a bronze medalist (2005, Sárospatak, Hungary) at the Central-European Olympiad in Informatics (<a href="http://ceoi.inf.elte.hu">CEOI</a>), as well as a world finalist (2010, Harbin, China) at the International Collegiate Programming Contest (<a href="http://cm.baylor.edu">ACM-ICPC</a>).
-</p>
-        <p class="more">
-          <a href="me.en.htm">▶ More</a>
-        </p>
-        <h2>Research</h2>
-        <p>Research interests: programming languages, semantics, abstract interpretation, static analysis, computer security.</p>
-        <h3>Recent publications</h3>
-        <p><a href="http://research.microsoft.com/en-us/people/mbarnett/" class="people">Michael Barnett</a>, Mehdi Bouaziz, <a href="http://www.linkedin.com/pub/manuel-fahndrich/2/427/47" class="people">Manuel Fähndrich</a>, and <a href="http://research.microsoft.com/en-us/people/logozzo/" class="people">Francesco Logozzo</a>, <a href="p/BarnettBouazizFahndrichLogozzo-Bytecode13.en.htm">A case for static analyzers in the cloud</a>, in <i><a href="http://costa.ls.fi.upm.es/bytecode13/">8th Workshop on Bytecode Semantics, Verification, Analysis, and Transformation (Bytecode 2013)</a></i>, March 2013. <a href="p/BarnettBouazizFahndrichLogozzo-Bytecode13.pdf">[Paper]</a><a href="p/BarnettBouazizFahndrichLogozzo-Bytecode13-slides.pdf">[Slides]</a></p>
-        <p>Mehdi Bouaziz, <a href="http://research.microsoft.com/en-us/people/logozzo/" class="people">Francesco Logozzo</a>, and <a href="http://www.linkedin.com/pub/manuel-fahndrich/2/427/47" class="people">Manuel Fähndrich</a>, <a href="p/BouazizLogozzoFahndrich-APLAS12.en.htm">Inference of Necessary Field Conditions with Abstract Interpretation</a>, in <i><a href="http://aplas12.kuis.kyoto-u.ac.jp/">10th Asian Symposium on Programming Languages and Systems (APLAS 2012)</a></i>, <a href="http://www.springer.com">Springer</a>, December 2012. <a href="p/BouazizLogozzoFahndrich-APLAS12.pdf">[Paper]</a><a href="p/BouazizLogozzoFahndrich-APLAS12-slides.pdf">[Slides]</a></p>
-        <p>Mehdi Bouaziz, <a href="p/Bouaziz-NSAD12.en.htm"><tt>TreeKs</tt>: A Functor to Make Numerical Abstract Domains Scalable</a>, in <i><a href="http://nsad2012.ucombinator.org/">4th International Workshop on Numerical and Symbolic Abstract Domains (NSAD 2012)</a></i>, <a href="http://www.elsevier.com/">Elsevier</a>, September 17, 2012. <a href="p/Bouaziz-NSAD12.pdf">[Paper]</a><a href="p/Bouaziz-NSAD12-slides.pdf">[Slides]</a></p>
-        <p class="more">
-          <a href="pubs.en.htm">▶ More</a>
-        </p>
-        <h3>Recent talks</h3>
-        <p><a href="p/Bouaziz-ECNU13-talk.en.htm">CodeContracts &amp; Clousot</a>.
-  <i>Course on Abstract Interpretation</i>, <a href="http://english.ecnu.edu.cn" class="place">East China Normal University</a>, Shanghai, China. November 26, 2013.
-  </p>
-        <p><a href="p/Bouaziz-AVDCPS13-talk.en.htm">Scalable Numerical Abstact Domains</a>.
-  <i>2nd Workshop on Analysis and Verification of Dependable Cyber Physical Software (AVDCPS 2013)</i>, <a href="http://english.nudt.edu.cn" class="place">National University of Defense Technology</a>, Changsha, China. November 23, 2013.
-  <a href="p/Bouaziz-AVDCPS13-slides.pdf">[Slides]</a></p>
-        <p><a href="p/LogozzoBouaziz-FMF2-talk.en.htm">Spécification et vérification de programmes avec CodeContracts</a>.
-  <i><a href="http://projects.laas.fr/IFSE/FMF/J2">2<sup>e</sup> Forum méthodes formelles (FMF 2013)</a></i>, <a href="http://www.laas.fr" class="place">Laboratoire d'Analyse et d'Architecture des Systèmes</a>, Toulouse, France. June 28, 2013.
-  <a href="p/LogozzoBouaziz-FMF2-slides.pdf">[Slides]</a></p>
-        <p class="more">
-          <a href="talks.en.htm">▶ More</a>
-        </p>
-        <h2>Contact</h2>
-        <p>Email: <tt><i>firstname</i>.<i>lastname</i>@ens.fr</tt></p>
-        <p>
-          <a href="mehdi-bouaziz.asc">My gpg public key</a>
-        </p>
-        <h3>Office address</h3>
-        <p>
-Équipe Abstraction<br />
-Hauts du DI, escalier Direction<br />
-École normale supérieure<br />
-45 rue d'Ulm<br />
-75005 Paris<br />
-France</p>
-        <p class="more">
-          <a href="contact.en.htm">▶ More</a>
-        </p>
-        <p class="footer center"><a href="index.en.htm">Home</a> | <a href="contact.en.htm">Contact</a> | <a href="sitemap.en.htm">Site map</a></p>
-        <p class="center" id="lastupdate">Last update: January 24, 2014</p>
-      </div>
-    </div>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; URL=index.html">
+    <link rel="canonical" href="index.html">
+    <title>Redirect - Mehdi Bouaziz</title>
+</head>
+<body>
+    <h1>Redirect</h1>
+    <p>You are being redirected to the main page. If this doesn't work automatically, <a href="index.html">click here</a>.</p>
+    <script>
+        window.location.href = "index.html";
+    </script>
+</body>
 </html>
