--- a/p/BarbinBouaziz-MLstate09.fr.htm
+++ b/p/BarbinBouaziz-MLstate09.fr.htm
@@ -1,42 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Content-Language" content="fr" />
-    <link rel="stylesheet" type="text/css" href="../s.css" />
-    <meta name="citation_title" content="A Unified Library of Primitives for QML Compilers and Interpreters" />
-    <meta name="citation_author" content="Mathieu Barbin" />
-    <meta name="citation_author" content="Bouaziz, Mehdi" />
-    <meta name="citation_publication_date" content="2009/09" />
-    <meta name="citation_pdf_url" content="http://www.bouaziz.me/p/BarbinBouaziz-MLstate09.pdf" />
-    <title>A Unified Library of Primitives for QML Compilers and Interpreters - Mathieu Barbin et Mehdi Bouaziz</title>
-  </head>
-  <body class="pub">
-    <div class="otherlangs">
-      <ul>
-        <li>
-          <a href="BarbinBouaziz-MLstate09.en.htm" rel="alternate" hreflang="en" xml:lang="en" lang="en">English version</a>
-        </li>
-      </ul>
-    </div>
-    <div class="page">
-      <div class="content">
-        <h2 class="citation_author"><a href="http://www.linkedin.fr/pub/mathieu-barbin/36/957/305" class="people">Mathieu Barbin</a> et Mehdi Bouaziz</h2>
-        <h1 class="citation_title">A Unified Library of Primitives for QML Compilers and Interpreters</h1>
-        <h3>rapport technique, <a href="http://www.mlstate.com" class="place">MLstate</a>, septembre 2009</h3>
-        <p>
-          <ul class="bigarrows">
-            <li><a href="BarbinBouaziz-MLstate09.pdf">PDF</a>, 6 pages, 149 Ko</li>
-            <li><i>Résumé : </i>We present in this document a new approach to the management of primitives of the QML language, in all kind of applications, including compilers, interpreters, as well as static analysers, etc. QML being the internal translation of the main language OPA designed by MLstate to build commercial web-applications, QML must support several kinds of compilations, targetting the client-side language JavaScript, and server-side languages OCaml, and more recently LLVM. By <i>primitives</i>, we denote here the part of the implementation used as initial library for QML (and so, OPA) applications, including functions to handle web protocols and markup languages, mathematics, low level database management, etc. This can be seen as the core part of QML which has to be implemented in each target language, unlike the rest of the language constructions which are automatically and efficiently compiled.<br />
-  We expose in this document the main ideas leading to a standardized and shared interface between the implementation of these primitives, and the MLstate applications, offering a possible yet static typing verification of the initial code, dynamic introspection features, and a shared implementation of the primitives between interpreters or compilers manipulating codes with different runtime algebras, thanks to regenerated specializations of the initial library, using a type projection system. 
-  </li>
-            <li>@techreport{BarbinBouaziz-MLstate09,<br />  author = {Mathieu Barbin and Bouaziz, Mehdi},<br />  title = {A Unified Library of Primitives for QML Compilers and Interpreters},<br />  year = {2009},<br />  month = {September},<br />  url = {http://www.bouaziz.me/p/BarbinBouaziz-MLstate09.pdf}<br />}</li>
-          </ul>
-        </p>
-        <p class="footer center"><a href="../index.fr.htm">Accueil</a> | <a href="../contact.fr.htm">Contact</a> | <a href="../sitemap.fr.htm">Plan du site</a></p>
-        <p class="center" id="lastupdate">Dernière mise à jour : 24 janvier 2014</p>
-      </div>
-    </div>
-  </body>
+<\!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; URL=../index.html">
+    <link rel="canonical" href="../index.html">
+    <title>Redirect - Mehdi Bouaziz</title>
+</head>
+<body>
+    <h1>Redirect</h1>
+    <p>You are being redirected to the main page. If this doesn't work automatically, <a href="../index.html">click here</a>.</p>
+    <script>
+        window.location.href = "../index.html";
+    </script>
+</body>
 </html>
