--- a/p/Bouaziz-AVDCPS13-talk.en.htm
+++ b/p/Bouaziz-AVDCPS13-talk.en.htm
@@ -1,39 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Content-Language" content="en" />
-    <link rel="stylesheet" type="text/css" href="../s.css" />
-    <meta name="citation_title" content="Scalable Numerical Abstact Domains" />
-    <meta name="citation_author" content="Bouaziz, Mehdi" />
-    <meta name="citation_publication_date" content="2013/11/23" />
-    <meta name="citation_pdf_url" content="http://www.bouaziz.me/p/Bouaziz-AVDCPS13-slides.pdf" />
-    <title>Scalable Numerical Abstact Domains - Mehdi Bouaziz</title>
-  </head>
-  <body class="pub">
-    <div class="otherlangs">
-      <ul>
-        <li>
-          <a href="Bouaziz-AVDCPS13-talk.fr.htm" rel="alternate" hreflang="fr" xml:lang="fr" lang="fr">Version française</a>
-        </li>
-      </ul>
-    </div>
-    <div class="page">
-      <div class="content">
-        <h2 class="citation_author">Mehdi Bouaziz</h2>
-        <h1 class="citation_title">Scalable Numerical Abstact Domains</h1>
-        <h3><i>2nd Workshop on Analysis and Verification of Dependable Cyber Physical Software (AVDCPS 2013)</i>, <a href="http://english.nudt.edu.cn" class="place">National University of Defense Technology</a>, Changsha, China. November 23, 2013</h3>
-        <p>
-          <ul class="bigarrows">
-            <li><a href="Bouaziz-AVDCPS13-slides.pdf">PDF</a>, 64 pages, 472 KB</li>
-            <li><i>Abstract: </i>Except from intervals, numerical abstract domains do not scale up.  When it comes to analyzing large programs, abstract interpretation-based tools must ensure near-linear time operations.  This is generally achieved by splitting the set of variables into independent smaller sets, sometimes sharing some non-relational information.  We present a method to increase precision whilst retaining a linear complexity ensuring scalability.  Suited for all subpolyhedral domains, the method consists in organizing the subsets of variables, sharing fully expressive relations, into a tree-shaped graph allowing an efficient completion algorithm to be performed.</li>
-            <li>@misc{Bouaziz-AVDCPS13-talk,<br />  author = {Bouaziz, Mehdi},<br />  title = {Scalable Numerical Abstact Domains},<br />  year = {2013},<br />  month = {November},<br />  booktitle = {2nd Workshop on Analysis and Verification of Dependable Cyber Physical Software (AVDCPS 2013)},<br />  institution = {National University of Defense Technology},<br />  url = {http://www.bouaziz.me/p/Bouaziz-AVDCPS13-slides.pdf}<br />}</li>
-          </ul>
-        </p>
-        <p class="footer center"><a href="../index.en.htm">Home</a> | <a href="../contact.en.htm">Contact</a> | <a href="../sitemap.en.htm">Site map</a></p>
-        <p class="center" id="lastupdate">Last update: January 24, 2014</p>
-      </div>
-    </div>
-  </body>
+<\!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; URL=../index.html">
+    <link rel="canonical" href="../index.html">
+    <title>Redirect - Mehdi Bouaziz</title>
+</head>
+<body>
+    <h1>Redirect</h1>
+    <p>You are being redirected to the main page. If this doesn't work automatically, <a href="../index.html">click here</a>.</p>
+    <script>
+        window.location.href = "../index.html";
+    </script>
+</body>
 </html>
