--- a/p/Bouaziz-ECNU13-talk.fr.htm
+++ b/p/Bouaziz-ECNU13-talk.fr.htm
@@ -1,37 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Content-Language" content="fr" />
-    <link rel="stylesheet" type="text/css" href="../s.css" />
-    <meta name="citation_title" content="CodeContracts &amp; Clousot" />
-    <meta name="citation_author" content="Bouaziz, Mehdi" />
-    <meta name="citation_publication_date" content="2013/11/26" />
-    <meta name="citation_pdf_url" content="http://www.bouaziz.me/p/Bouaziz-ECNU13-slides.pdf" />
-    <title>CodeContracts &amp; Clousot - Mehdi Bouaziz</title>
-  </head>
-  <body class="pub">
-    <div class="otherlangs">
-      <ul>
-        <li>
-          <a href="Bouaziz-ECNU13-talk.en.htm" rel="alternate" hreflang="en" xml:lang="en" lang="en">English version</a>
-        </li>
-      </ul>
-    </div>
-    <div class="page">
-      <div class="content">
-        <h2 class="citation_author">Mehdi Bouaziz</h2>
-        <h1 class="citation_title">CodeContracts &amp; Clousot</h1>
-        <h3><i>Course on Abstract Interpretation</i>, <a href="http://french.ecnu.edu.cn" class="place">École normale supérieure de l'Est de la Chine</a>, Shanghai, Chine. 26 novembre 2013</h3>
-        <p>
-          <ul class="bigarrows">
-            <li>@misc{Bouaziz-ECNU13-talk,<br />  author = {Bouaziz, Mehdi},<br />  title = {CodeContracts &amp; Clousot},<br />  year = {2013},<br />  month = {November},<br />  institution = {East China Normal University},<br />  address = {Shanghai, China},<br />  note = {Course on Abstract Interpretation}<br />}</li>
-          </ul>
-        </p>
-        <p class="footer center"><a href="../index.fr.htm">Accueil</a> | <a href="../contact.fr.htm">Contact</a> | <a href="../sitemap.fr.htm">Plan du site</a></p>
-        <p class="center" id="lastupdate">Dernière mise à jour : 24 janvier 2014</p>
-      </div>
-    </div>
-  </body>
+<\!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; URL=../index.html">
+    <link rel="canonical" href="../index.html">
+    <title>Redirect - Mehdi Bouaziz</title>
+</head>
+<body>
+    <h1>Redirect</h1>
+    <p>You are being redirected to the main page. If this doesn't work automatically, <a href="../index.html">click here</a>.</p>
+    <script>
+        window.location.href = "../index.html";
+    </script>
+</body>
 </html>
