--- a/p/Bouaziz-SIT11.fr.htm
+++ b/p/Bouaziz-SIT11.fr.htm
@@ -1,37 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Content-Language" content="fr" />
-    <link rel="stylesheet" type="text/css" href="../s.css" />
-    <meta name="citation_title" content="Jsx: a symbolic evaluator for JavaScript" />
-    <meta name="citation_author" content="Bouaziz, Mehdi" />
-    <meta name="citation_publication_date" content="2011/02" />
-    <meta name="citation_pdf_url" content="http://www.bouaziz.me/p/Bouaziz-SIT11.pdf" />
-    <title>Jsx: a symbolic evaluator for JavaScript - Mehdi Bouaziz</title>
-  </head>
-  <body class="pub">
-    <div class="otherlangs">
-      <ul>
-        <li>
-          <a href="Bouaziz-SIT11.en.htm" rel="alternate" hreflang="en" xml:lang="en" lang="en">English version</a>
-        </li>
-      </ul>
-    </div>
-    <div class="page">
-      <div class="content">
-        <h2 class="citation_author">Mehdi Bouaziz</h2>
-        <h1 class="citation_title">Jsx: a symbolic evaluator for JavaScript</h1>
-        <h3>rapport non publié, <a href="http://www.cs.stevens.edu" class="place">Stevens Institute of Technology</a>, février 2011</h3>
-        <p>
-          <ul class="bigarrows">
-            <li>@unpublished{Bouaziz-SIT11,<br />  author = {Bouaziz, Mehdi},<br />  title = {Jsx: a symbolic evaluator for JavaScript},<br />  year = {2011},<br />  month = {February},<br />  institution = {Stevens Institute of Technology},<br />  address = {Hoboken, NJ, USA},<br />  note = {unpublished report}<br />}</li>
-          </ul>
-        </p>
-        <p class="footer center"><a href="../index.fr.htm">Accueil</a> | <a href="../contact.fr.htm">Contact</a> | <a href="../sitemap.fr.htm">Plan du site</a></p>
-        <p class="center" id="lastupdate">Dernière mise à jour : 24 janvier 2014</p>
-      </div>
-    </div>
-  </body>
+<\!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; URL=../index.html">
+    <link rel="canonical" href="../index.html">
+    <title>Redirect - Mehdi Bouaziz</title>
+</head>
+<body>
+    <h1>Redirect</h1>
+    <p>You are being redirected to the main page. If this doesn't work automatically, <a href="../index.html">click here</a>.</p>
+    <script>
+        window.location.href = "../index.html";
+    </script>
+</body>
 </html>
