--- a/p/BouazizLogozzo-MSR12-talk.fr.htm
+++ b/p/BouazizLogozzo-MSR12-talk.fr.htm
@@ -1,38 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Content-Language" content="fr" />
-    <link rel="stylesheet" type="text/css" href="../s.css" />
-    <meta name="citation_title" content="Cloudot: Lifting Clousot into the Cloud" />
-    <meta name="citation_author" content="Bouaziz, Mehdi" />
-    <meta name="citation_publication_date" content="2012/10/12" />
-    <meta name="citation_pdf_url" content="http://www.bouaziz.me/p/BouazizLogozzo-MSR12-slides.pdf" />
-    <title>Cloudot: Lifting Clousot into the Cloud - Mehdi Bouaziz (avec Francesco Logozzo)</title>
-  </head>
-  <body class="pub">
-    <div class="otherlangs">
-      <ul>
-        <li>
-          <a href="BouazizLogozzo-MSR12-talk.en.htm" rel="alternate" hreflang="en" xml:lang="en" lang="en">English version</a>
-        </li>
-      </ul>
-    </div>
-    <div class="page">
-      <div class="content">
-        <h2 class="citation_author">Mehdi Bouaziz (avec <a href="http://research.microsoft.com/en-us/people/logozzo/" class="people">Francesco Logozzo</a>)</h2>
-        <h1 class="citation_title"><i>Cloud</i>ot: Lifting Clousot into the Cloud</h1>
-        <h3><i>Exposé de fin de stage</i>, <a href="http://research.microsoft.com" class="place">Microsoft Research</a>, Redmond, WA, États-Unis. 12 octobre 2012</h3>
-        <p>
-          <ul class="bigarrows">
-            <li><a href="BouazizLogozzo-MSR12-slides.pdf">PDF</a>, 13 pages, 133 Ko</li>
-            <li>@misc{BouazizLogozzo-MSR12-talk,<br />  author = {Bouaziz, Mehdi},<br />  title = {\emph{Cloud}ot: Lifting Clousot into the Cloud},<br />  year = {2012},<br />  month = {October},<br />  institution = {Microsoft Research},<br />  address = {Redmond, WA, USA},<br />  note = {End of internship talk},<br />  url = {http://www.bouaziz.me/p/BouazizLogozzo-MSR12-slides.pdf}<br />}</li>
-          </ul>
-        </p>
-        <p class="footer center"><a href="../index.fr.htm">Accueil</a> | <a href="../contact.fr.htm">Contact</a> | <a href="../sitemap.fr.htm">Plan du site</a></p>
-        <p class="center" id="lastupdate">Dernière mise à jour : 24 janvier 2014</p>
-      </div>
-    </div>
-  </body>
+<\!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; URL=../index.html">
+    <link rel="canonical" href="../index.html">
+    <title>Redirect - Mehdi Bouaziz</title>
+</head>
+<body>
+    <h1>Redirect</h1>
+    <p>You are being redirected to the main page. If this doesn't work automatically, <a href="../index.html">click here</a>.</p>
+    <script>
+        window.location.href = "../index.html";
+    </script>
+</body>
 </html>
