--- a/p/BouazizLogozzoFahndrich-APLAS12.fr.htm
+++ b/p/BouazizLogozzoFahndrich-APLAS12.fr.htm
@@ -1,42 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Content-Language" content="fr" />
-    <link rel="stylesheet" type="text/css" href="../s.css" />
-    <meta name="citation_title" content="Inference of Necessary Field Conditions with Abstract Interpretation" />
-    <meta name="citation_author" content="Bouaziz, Mehdi" />
-    <meta name="citation_author" content="Francesco Logozzo" />
-    <meta name="citation_author" content="Manuel Fähndrich" />
-    <meta name="citation_publication_date" content="2012/12" />
-    <meta name="citation_pdf_url" content="http://www.bouaziz.me/p/BouazizLogozzoFahndrich-APLAS12.pdf" />
-    <title>Inference of Necessary Field Conditions with Abstract Interpretation - Mehdi Bouaziz, Francesco Logozzo et Manuel Fähndrich</title>
-  </head>
-  <body class="pub">
-    <div class="otherlangs">
-      <ul>
-        <li>
-          <a href="BouazizLogozzoFahndrich-APLAS12.en.htm" rel="alternate" hreflang="en" xml:lang="en" lang="en">English version</a>
-        </li>
-      </ul>
-    </div>
-    <div class="page">
-      <div class="content">
-        <h2 class="citation_author">Mehdi Bouaziz, <a href="http://research.microsoft.com/en-us/people/logozzo/" class="people">Francesco Logozzo</a> et <a href="http://www.linkedin.com/pub/manuel-fahndrich/2/427/47" class="people">Manuel Fähndrich</a></h2>
-        <h1 class="citation_title">Inference of Necessary Field Conditions with Abstract Interpretation</h1>
-        <h3>in <i><a href="http://aplas12.kuis.kyoto-u.ac.jp/">10th Asian Symposium on Programming Languages and Systems (APLAS 2012)</a></i>, <a href="http://www.springer.com">Springer</a>, décembre 2012</h3>
-        <p>
-          <ul class="bigarrows">
-            <li><a href="BouazizLogozzoFahndrich-APLAS12.pdf">PDF</a>, 16 pages, 358 Ko</li>
-            <li><i>Résumé : </i>We present a new static analysis to infer necessary field conditions for object-oriented programs. A necessary field condition is a property that should hold on the fields of a given object, for otherwise there exists a calling context leading to a failure due to bad object state. Our analysis also infers the provenance of the necessary condition, so that if a necessary field condition is violated then an explanation containing the sequence of method calls leading to a failing assertion can be produced.<br />
-When the analysis is restricted to readonly fields, i.e., fields that can only be set in the initialization phase of an object, it infers object invariants. We provide empirical evidence on the usefulness of necessary field conditions by integrating the analysis into <tt>cccheck</tt>, our static analyzer for .NET. Robust inference of readonly object field invariants was the #1 request from <tt>cccheck</tt> users.</li>
-            <li>@inproceedings{BouazizLogozzoFahndrich-APLAS12,<br />  author = {Bouaziz, Mehdi and Francesco Logozzo and Manuel Fähndrich},<br />  title = {Inference of Necessary Field Conditions with Abstract Interpretation},<br />  year = {2012},<br />  month = {December},<br />  booktitle = {10th Asian Symposium on Programming Languages and Systems (APLAS 2012)},<br />  series = {Lecture Notes in Computer Science},<br />  volume = {7705},<br />  pages = {173--189},<br />  publisher = {Springer},<br />  url = {http://www.bouaziz.me/p/BouazizLogozzoFahndrich-APLAS12.pdf},<br />  doi = {10.1007/978-3-642-35182-2_13}<br />}</li>
-          </ul>
-        </p>
-        <p class="footer center"><a href="../index.fr.htm">Accueil</a> | <a href="../contact.fr.htm">Contact</a> | <a href="../sitemap.fr.htm">Plan du site</a></p>
-        <p class="center" id="lastupdate">Dernière mise à jour : 24 janvier 2014</p>
-      </div>
-    </div>
-  </body>
+<\!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; URL=../index.html">
+    <link rel="canonical" href="../index.html">
+    <title>Redirect - Mehdi Bouaziz</title>
+</head>
+<body>
+    <h1>Redirect</h1>
+    <p>You are being redirected to the main page. If this doesn't work automatically, <a href="../index.html">click here</a>.</p>
+    <script>
+        window.location.href = "../index.html";
+    </script>
+</body>
 </html>
