--- a/pubs.fr.htm
+++ b/pubs.fr.htm
@@ -1,51 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Content-Language" content="fr" />
-    <link rel="stylesheet" type="text/css" href="s.css" />
-    <title>Publications [Mehdi Bouaziz]</title>
-  </head>
-  <body class="generic">
-    <div class="otherlangs">
-      <ul>
-        <li>
-          <a href="pubs.en.htm" rel="alternate" hreflang="en" xml:lang="en" lang="en">English version</a>
-        </li>
-      </ul>
-    </div>
-    <div class="page">
-      <div class="content">
-        <h1>Publications</h1>
-        <h2>2013</h2>
-        <p><a href="http://research.microsoft.com/en-us/people/mbarnett/" class="people">Michael Barnett</a>, Mehdi Bouaziz, <a href="http://www.linkedin.com/pub/manuel-fahndrich/2/427/47" class="people">Manuel Fähndrich</a> et <a href="http://research.microsoft.com/en-us/people/logozzo/" class="people">Francesco Logozzo</a>, <a href="p/BarnettBouazizFahndrichLogozzo-Bytecode13.fr.htm">A case for static analyzers in the cloud</a>, in <i><a href="http://costa.ls.fi.upm.es/bytecode13/">8th Workshop on Bytecode Semantics, Verification, Analysis, and Transformation (Bytecode 2013)</a></i>, mars 2013. <a href="p/BarnettBouazizFahndrichLogozzo-Bytecode13.pdf">[Article]</a><a href="p/BarnettBouazizFahndrichLogozzo-Bytecode13-slides.pdf">[Transparents]</a></p>
-        <h2>2012</h2>
-        <p>Mehdi Bouaziz, <a href="http://research.microsoft.com/en-us/people/logozzo/" class="people">Francesco Logozzo</a> et <a href="http://www.linkedin.com/pub/manuel-fahndrich/2/427/47" class="people">Manuel Fähndrich</a>, <a href="p/BouazizLogozzoFahndrich-APLAS12.fr.htm">Inference of Necessary Field Conditions with Abstract Interpretation</a>, in <i><a href="http://aplas12.kuis.kyoto-u.ac.jp/">10th Asian Symposium on Programming Languages and Systems (APLAS 2012)</a></i>, <a href="http://www.springer.com">Springer</a>, décembre 2012. <a href="p/BouazizLogozzoFahndrich-APLAS12.pdf">[Article]</a><a href="p/BouazizLogozzoFahndrich-APLAS12-slides.pdf">[Transparents]</a></p>
-        <p>Mehdi Bouaziz, <a href="p/Bouaziz-NSAD12.fr.htm"><tt>TreeKs</tt>: A Functor to Make Numerical Abstract Domains Scalable</a>, in <i><a href="http://nsad2012.ucombinator.org/">4th International Workshop on Numerical and Symbolic Abstract Domains (NSAD 2012)</a></i>, <a href="http://www.elsevier.com/">Elsevier</a>, 17 septembre 2012. <a href="p/Bouaziz-NSAD12.pdf">[Article]</a><a href="p/Bouaziz-NSAD12-slides.pdf">[Transparents]</a></p>
-        <h2>2011</h2>
-        <p>Mehdi Bouaziz, <a href="p/Bouaziz-SIT11.fr.htm">Jsx: a symbolic evaluator for JavaScript</a>, rapport non publié, <a href="http://www.cs.stevens.edu" class="place">Stevens Institute of Technology</a>, février 2011. </p>
-        <h2>2010</h2>
-        <p>Mehdi Bouaziz, <a href="p/Bouaziz-ENS10.fr.htm"><tt>TreeKs</tt>: <span>un foncteur pour faire passer les domains numériques à l'échelle</span></a>, rapport de stage de master, <a href="http://www.di.ens.fr" class="place">École normale supérieure</a>, août 2010. <a href="p/Bouaziz-ENS10.pdf">[Article]</a><a href="p/Bouaziz-ENS10-slides.pdf">[Transparents]</a></p>
-        <h2>2009</h2>
-        <p><a href="http://www.linkedin.fr/pub/mathieu-barbin/36/957/305" class="people">Mathieu Barbin</a> et Mehdi Bouaziz, <a href="p/BarbinBouaziz-MLstate09.fr.htm">A Unified Library of Primitives for QML Compilers and Interpreters</a>, rapport technique, <a href="http://www.mlstate.com" class="place">MLstate</a>, septembre 2009. <a href="p/BarbinBouaziz-MLstate09.pdf">[Article]</a></p>
-        <p>Mehdi Bouaziz, <a href="p/Bouaziz-MLstate09.fr.htm">Optimized Client-Server Distribution of Ajax Web Applications</a>, rapport de stage, <a href="http://www.mlstate.com" class="place">MLstate</a>, septembre 2009. <a href="p/Bouaziz-MLstate09.pdf">[Article]</a></p>
-        <h2>2008</h2>
-        <p>Mehdi Bouaziz, <a href="p/Bouaziz-MLstate08.fr.htm"><span>Approximation statique de propriétés d'applications web</span></a>, rapport de stage, <a href="http://www.mlstate.com" class="place">MLstate</a>, septembre 2008. <a href="p/Bouaziz-MLstate08.pdf">[Article]</a></p>
-        <h2>Co-auteurs</h2>
-        <ul>
-          <li><a href="http://www.linkedin.fr/pub/mathieu-barbin/36/957/305" class="people">Mathieu Barbin</a> (1)</li>
-          <li><a href="http://research.microsoft.com/en-us/people/mbarnett/" class="people">Michael Barnett</a> (1)</li>
-          <li><a href="http://www.linkedin.com/pub/manuel-fahndrich/2/427/47" class="people">Manuel Fähndrich</a> (2)</li>
-          <li><a href="http://research.microsoft.com/en-us/people/logozzo/" class="people">Francesco Logozzo</a> (2)</li>
-        </ul>
-        <h2>Moteurs de recherche</h2>
-        <p><a href="http://ens.academia.edu/MehdiBouaziz">Academia</a>,
-<a href="http://www.informatik.uni-trier.de/~ley/pers/hd/b/Bouaziz:Mehdi.html">DBLP</a>,
-<a href="http://scholar.google.com/citations?user=dELWOYoAAAAJ">Google Scholar</a></p>
-        <p class="footer center"><a href="index.fr.htm">Accueil</a> | <a href="contact.fr.htm">Contact</a> | <a href="sitemap.fr.htm">Plan du site</a></p>
-        <p class="center" id="lastupdate">Dernière mise à jour : 24 janvier 2014</p>
-      </div>
-    </div>
-  </body>
+<\!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; URL=index.html">
+    <link rel="canonical" href="index.html">
+    <title>Redirect - Mehdi Bouaziz</title>
+</head>
+<body>
+    <h1>Redirect</h1>
+    <p>You are being redirected to the main page. If this doesn't work automatically, <a href="index.html">click here</a>.</p>
+    <script>
+        window.location.href = "index.html";
+    </script>
+</body>
 </html>
