--- a/treeks/index.htm
+++ b/treeks/index.htm
@@ -1,19 +1,16 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
- <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta http-equiv="Content-Language" content="en" />
-  <link rel="stylesheet" type="text/css" href="../s.css" />
-  <title>TreeKs: a Functor to Make Numerical Domains Scalable [Mehdi Bouaziz]</title>
- </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; URL=../index.html">
+    <link rel="canonical" href="../index.html">
+    <title>Redirect - Mehdi Bouaziz</title>
+</head>
 <body>
-
-<h1>TreeKs: a Functor to Make Numerical Domains Scalable</h1>
-
-<p>Masters Research Internship at the <a href="http://www.di.ens.fr/WebHome.html.en" class="place">Computer Science department</a> of the <a href="http://www.ens.fr/?lang=en" class="place">École normale supérieure</a>. Advised by <a href="http://www.di.ens.fr/%7Emine/perso/index.html.en" class="people">Antoine Miné</a>. March &ndash; August 2010. <a href="../p/Bouaziz-ENS10.pdf">[Report (in French)]</a> <a href="../p/Bouaziz-ENS10-slides.pdf">[Slides (in French)]</a>
-</p>
-
-<p>Article at NSAD 2012. <a href="../p/Bouaziz-NSAD12.pdf">[Paper]</a> <a href="../p/Bouaziz-NSAD12-slides.pdf">[Slides]</a></p>
-	
+    <h1>Redirect</h1>
+    <p>You are being redirected to the main page. If this doesn't work automatically, <a href="../index.html">click here</a>.</p>
+    <script>
+        window.location.href = "../index.html";
+    </script>
 </body>
 </html>
