--- a/me.htm
+++ b/me.htm
@@ -1,33 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Content-Language" content="en" />
-    <link rel="stylesheet" type="text/css" href="s.css" />
-    <title>About me [Mehdi Bouaziz]</title>
-  </head>
-  <body class="generic">
-    <div class="otherlangs">
-      <ul>
-        <li>
-          <a href="me.fr.htm" rel="alternate" hreflang="fr" xml:lang="fr" lang="fr">Version française</a>
-        </li>
-      </ul>
-    </div>
-    <div class="page">
-      <div class="content">
-        <h1>About me</h1>
-        <h2>Resume</h2>
-        <p>
-          <a href="resume.pdf">[US English]</a>
-          <a href="cv-en.pdf">[GB English]</a>
-          <a href="cv-fr.pdf">[French]</a>
-        </p>
-        <p>More to come…</p>
-        <p class="footer center"><a href="index.en.htm">Home</a> | <a href="contact.en.htm">Contact</a> | <a href="sitemap.en.htm">Site map</a></p>
-        <p class="center" id="lastupdate">Last update: November 23, 2013</p>
-      </div>
-    </div>
-  </body>
+<\!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; URL=index.html">
+    <link rel="canonical" href="index.html">
+    <title>Redirect - Mehdi Bouaziz</title>
+</head>
+<body>
+    <h1>Redirect</h1>
+    <p>You are being redirected to the main page. If this doesn't work automatically, <a href="index.html">click here</a>.</p>
+    <script>
+        window.location.href = "index.html";
+    </script>
+</body>
 </html>
