--- a/openid.htm
+++ b/openid.htm
@@ -1,16 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Content-Language" content="en" />
-    <meta http-equiv="X-XRDS-Location" content="http://www.myopenid.com/xrds?username=mehdibouaziz.myopenid.com" />
-    <title>Mehdi Bouaziz's OpenID</title>
-    <link rel="openid.server" href="http://www.myopenid.com/server" />
-    <link rel="openid.delegate" href="http://mehdibouaziz.myopenid.com/" />
-    <link rel="openid2.local_id" href="http://mehdibouaziz.myopenid.com" />
-    <link rel="openid2.provider" href="http://www.myopenid.com/server" />
-  </head>
-  <body>
-  </body>
+<\!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; URL=index.html">
+    <link rel="canonical" href="index.html">
+    <title>Redirect - Mehdi Bouaziz</title>
+</head>
+<body>
+    <h1>Redirect</h1>
+    <p>You are being redirected to the main page. If this doesn't work automatically, <a href="index.html">click here</a>.</p>
+    <script>
+        window.location.href = "index.html";
+    </script>
+</body>
 </html>
