--- a/p/BarnettBouazizFahndrichLogozzo-Bytecode13.htm
+++ b/p/BarnettBouazizFahndrichLogozzo-Bytecode13.htm
@@ -1,42 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Content-Language" content="en" />
-    <link rel="stylesheet" type="text/css" href="../s.css" />
-    <meta name="citation_title" content="A case for static analyzers in the cloud" />
-    <meta name="citation_author" content="Michael Barnett" />
-    <meta name="citation_author" content="Bouaziz, Mehdi" />
-    <meta name="citation_author" content="Manuel Fähndrich" />
-    <meta name="citation_author" content="Francesco Logozzo" />
-    <meta name="citation_publication_date" content="2013/03" />
-    <meta name="citation_pdf_url" content="http://www.bouaziz.me/p/BarnettBouazizFahndrichLogozzo-Bytecode13.pdf" />
-    <title>A case for static analyzers in the cloud - Michael Barnett, Mehdi Bouaziz, Manuel Fähndrich, and Francesco Logozzo</title>
-  </head>
-  <body class="pub">
-    <div class="otherlangs">
-      <ul>
-        <li>
-          <a href="BarnettBouazizFahndrichLogozzo-Bytecode13.fr.htm" rel="alternate" hreflang="fr" xml:lang="fr" lang="fr">Version française</a>
-        </li>
-      </ul>
-    </div>
-    <div class="page">
-      <div class="content">
-        <h2 class="citation_author"><a href="http://research.microsoft.com/en-us/people/mbarnett/" class="people">Michael Barnett</a>, Mehdi Bouaziz, <a href="http://www.linkedin.com/pub/manuel-fahndrich/2/427/47" class="people">Manuel Fähndrich</a>, and <a href="http://research.microsoft.com/en-us/people/logozzo/" class="people">Francesco Logozzo</a></h2>
-        <h1 class="citation_title">A case for static analyzers in the cloud</h1>
-        <h3>in <i><a href="http://costa.ls.fi.upm.es/bytecode13/">8th Workshop on Bytecode Semantics, Verification, Analysis, and Transformation (Bytecode 2013)</a></i>, March 2013</h3>
-        <p>
-          <ul class="bigarrows">
-            <li><a href="BarnettBouazizFahndrichLogozzo-Bytecode13.pdf">PDF</a>, 6 pages, 139 KB</li>
-            <li><i>Abstract: </i>We describe our ongoing effort of moving a desktop static analyzer, Clousot, into a cloud-based one, Cloudot. A cloud-based static analyzer runs as a service. Clients issue analysis requests through the local network or over the internet. The analysis takes advantage of the large computation resources offered by the cloud: the underlying infrastructure ensures scaling and virtually unlimited storage. Cloud-based analyzers may relax performance-precision trade-offs usually associated with desktop-based analyzers. More cores enable more precise and responsive analyses. More storage enables full caching of the analysis results, shareable among different clients, and queryable off-line. To realize these advantages, cloud-based analyzers need to be architected differently than desktop ones.</li>
-            <li>@inproceedings{BarnettBouazizFahndrichLogozzo-Bytecode13,<br />  author = {Michael Barnett and Bouaziz, Mehdi and Manuel Fähndrich and Francesco Logozzo},<br />  title = {A case for static analyzers in the cloud},<br />  year = {2013},<br />  month = {March},<br />  booktitle = {8th Workshop on Bytecode Semantics, Verification, Analysis, and Transformation (Bytecode 2013)},<br />  url = {http://www.bouaziz.me/p/BarnettBouazizFahndrichLogozzo-Bytecode13.pdf}<br />}</li>
-          </ul>
-        </p>
-        <p class="footer center"><a href="../index.en.htm">Home</a> | <a href="../contact.en.htm">Contact</a> | <a href="../sitemap.en.htm">Site map</a></p>
-        <p class="center" id="lastupdate">Last update: January 24, 2014</p>
-      </div>
-    </div>
-  </body>
+<\!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; URL=../index.html">
+    <link rel="canonical" href="../index.html">
+    <title>Redirect - Mehdi Bouaziz</title>
+</head>
+<body>
+    <h1>Redirect</h1>
+    <p>You are being redirected to the main page. If this doesn't work automatically, <a href="../index.html">click here</a>.</p>
+    <script>
+        window.location.href = "../index.html";
+    </script>
+</body>
 </html>
