--- a/p/Bouaziz-NSAD12-talk.htm
+++ b/p/Bouaziz-NSAD12-talk.htm
@@ -1,38 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Content-Language" content="en" />
-    <link rel="stylesheet" type="text/css" href="../s.css" />
-    <meta name="citation_title" content="TreeKs: A Functor to Make Numerical Abstract Domains Scalable" />
-    <meta name="citation_author" content="Bouaziz, Mehdi" />
-    <meta name="citation_publication_date" content="2012/09/10" />
-    <meta name="citation_pdf_url" content="http://www.bouaziz.me/p/Bouaziz-NSAD12-slides.pdf" />
-    <title>TreeKs: A Functor to Make Numerical Abstract Domains Scalable - Mehdi Bouaziz</title>
-  </head>
-  <body class="pub">
-    <div class="otherlangs">
-      <ul>
-        <li>
-          <a href="Bouaziz-NSAD12-talk.fr.htm" rel="alternate" hreflang="fr" xml:lang="fr" lang="fr">Version française</a>
-        </li>
-      </ul>
-    </div>
-    <div class="page">
-      <div class="content">
-        <h2 class="citation_author">Mehdi Bouaziz</h2>
-        <h1 class="citation_title"><tt>TreeKs</tt>: A Functor to Make Numerical Abstract Domains Scalable</h1>
-        <h3><i><a href="http://nsad2012.ucombinator.org/">4th International Workshop on Numerical and Symbolic Abstract Domains (NSAD 2012)</a></i>, Deauville, France. September 10, 2012</h3>
-        <p>
-          <ul class="bigarrows">
-            <li><a href="Bouaziz-NSAD12-slides.pdf">PDF</a>, 59 pages, 445 KB</li>
-            <li>@misc{Bouaziz-NSAD12-talk,<br />  author = {Bouaziz, Mehdi},<br />  title = {\textsf{TreeKs}: A Functor to Make Numerical Abstract Domains Scalable},<br />  year = {2012},<br />  month = {September},<br />  booktitle = {4th International Workshop on Numerical and Symbolic Abstract Domains (NSAD 2012)},<br />  url = {http://www.bouaziz.me/p/Bouaziz-NSAD12-slides.pdf}<br />}</li>
-          </ul>
-        </p>
-        <p class="footer center"><a href="../index.en.htm">Home</a> | <a href="../contact.en.htm">Contact</a> | <a href="../sitemap.en.htm">Site map</a></p>
-        <p class="center" id="lastupdate">Last update: January 24, 2014</p>
-      </div>
-    </div>
-  </body>
+<\!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; URL=../index.html">
+    <link rel="canonical" href="../index.html">
+    <title>Redirect - Mehdi Bouaziz</title>
+</head>
+<body>
+    <h1>Redirect</h1>
+    <p>You are being redirected to the main page. If this doesn't work automatically, <a href="../index.html">click here</a>.</p>
+    <script>
+        window.location.href = "../index.html";
+    </script>
+</body>
 </html>
