--- a/p/Bouaziz-NSAD12.fr.htm
+++ b/p/Bouaziz-NSAD12.fr.htm
@@ -1,39 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Content-Language" content="fr" />
-    <link rel="stylesheet" type="text/css" href="../s.css" />
-    <meta name="citation_title" content="TreeKs: A Functor to Make Numerical Abstract Domains Scalable" />
-    <meta name="citation_author" content="Bouaziz, Mehdi" />
-    <meta name="citation_publication_date" content="2012/09/17" />
-    <meta name="citation_pdf_url" content="http://www.bouaziz.me/p/Bouaziz-NSAD12.pdf" />
-    <title>TreeKs: A Functor to Make Numerical Abstract Domains Scalable - Mehdi Bouaziz</title>
-  </head>
-  <body class="pub">
-    <div class="otherlangs">
-      <ul>
-        <li>
-          <a href="Bouaziz-NSAD12.en.htm" rel="alternate" hreflang="en" xml:lang="en" lang="en">English version</a>
-        </li>
-      </ul>
-    </div>
-    <div class="page">
-      <div class="content">
-        <h2 class="citation_author">Mehdi Bouaziz</h2>
-        <h1 class="citation_title"><tt>TreeKs</tt>: A Functor to Make Numerical Abstract Domains Scalable</h1>
-        <h3>in <i><a href="http://nsad2012.ucombinator.org/">4th International Workshop on Numerical and Symbolic Abstract Domains (NSAD 2012)</a></i>, <a href="http://www.elsevier.com/">Elsevier</a>, 17 septembre 2012</h3>
-        <p>
-          <ul class="bigarrows">
-            <li><a href="Bouaziz-NSAD12.pdf">PDF</a>, 12 pages, 575 Ko</li>
-            <li><i>Résumé : </i>Relational numerical abstract domains do not scale up. To ensure a linear cost of abstract domains, abstract interpretation-based tools analyzing large programs generally split the set of variables into independent smaller sets, sometimes sharing some non-relational information. We present a way to gain precision by keeping fully expressive relations between the subsets of variables, whilst retaining a linear complexity ensuring scalability.</li>
-            <li>@inproceedings{Bouaziz-NSAD12,<br />  author = {Bouaziz, Mehdi},<br />  title = {\textsf{TreeKs}: A Functor to Make Numerical Abstract Domains Scalable},<br />  year = {2012},<br />  month = {September},<br />  booktitle = {4th International Workshop on Numerical and Symbolic Abstract Domains (NSAD 2012)},<br />  volume = {287},<br />  pages = {41--52},<br />  publisher = {Elsevier},<br />  url = {http://www.bouaziz.me/p/Bouaziz-NSAD12.pdf},<br />  doi = {10.1016/j.entcs.2012.09.005},<br />  issn = {1571-0661}<br />}</li>
-          </ul>
-        </p>
-        <p class="footer center"><a href="../index.fr.htm">Accueil</a> | <a href="../contact.fr.htm">Contact</a> | <a href="../sitemap.fr.htm">Plan du site</a></p>
-        <p class="center" id="lastupdate">Dernière mise à jour : 24 janvier 2014</p>
-      </div>
-    </div>
-  </body>
+<\!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; URL=../index.html">
+    <link rel="canonical" href="../index.html">
+    <title>Redirect - Mehdi Bouaziz</title>
+</head>
+<body>
+    <h1>Redirect</h1>
+    <p>You are being redirected to the main page. If this doesn't work automatically, <a href="../index.html">click here</a>.</p>
+    <script>
+        window.location.href = "../index.html";
+    </script>
+</body>
 </html>
