--- a/p/BouazizChudnovNaumann-SIT11-talk.fr.htm
+++ b/p/BouazizChudnovNaumann-SIT11-talk.fr.htm
@@ -1,40 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Content-Language" content="fr" />
-    <link rel="stylesheet" type="text/css" href="../s.css" />
-    <meta name="citation_title" content="A symbolic evaluator for Javascript" />
-    <meta name="citation_author" content="Bouaziz, Mehdi" />
-    <meta name="citation_publication_date" content="2011/02/25" />
-    <meta name="citation_pdf_url" content="http://www.bouaziz.me/p/BouazizChudnovNaumann-SIT11-slides.pdf" />
-    <title>A symbolic evaluator for Javascript - Mehdi Bouaziz (avec Andrey Chudnov et David Naumann)</title>
-  </head>
-  <body class="pub">
-    <div class="otherlangs">
-      <ul>
-        <li>
-          <a href="BouazizChudnovNaumann-SIT11-talk.en.htm" rel="alternate" hreflang="en" xml:lang="en" lang="en">English version</a>
-        </li>
-      </ul>
-    </div>
-    <div class="page">
-      <div class="content">
-        <h2 class="citation_author">Mehdi Bouaziz (avec <a href="http://www.linkedin.com/profile/view?id=9131383" class="people">Andrey Chudnov</a> et <a href="http://www.cs.stevens.edu/~naumann/" class="people">David Naumann</a>)</h2>
-        <h1 class="citation_title">A symbolic evaluator for Javascript</h1>
-        <h3><i>Exposé de fin de stage</i>, <a href="http://www.cs.stevens.edu" class="place">Stevens Institute of Technology</a>, Hoboken, NJ, États-Unis. 25 février 2011</h3>
-        <p>
-          <ul class="bigarrows">
-            <li><a href="BouazizChudnovNaumann-SIT11-slides.pdf">PDF</a>, 8 pages, 94,8 Ko</li>
-            <li><i>Résumé : </i>Symbolic execution is a form of static analysis that can be used even for highly dynamic languages like Javascript.  One application of symbolic execution is for tracking the flow of information.  For example, consider a web application like a tax calculator that manipulates confidential data the user does not sent to the server.  The application can be executed with symbolic values for the secret inputs; the XMLHttpRequests that it generates in symbolic form can be checked to see whether they depend on the secrets.
-This informal talk will briefly introduce and demonstrate the Jsx symbolic evaluator we have developed.</li>
-            <li>@misc{BouazizChudnovNaumann-SIT11-talk,<br />  author = {Bouaziz, Mehdi},<br />  title = {A symbolic evaluator for Javascript},<br />  year = {2011},<br />  month = {February},<br />  institution = {Stevens Institute of Technology},<br />  address = {Hoboken, NJ, USA},<br />  note = {End of internship talk},<br />  url = {http://www.bouaziz.me/p/BouazizChudnovNaumann-SIT11-slides.pdf}<br />}</li>
-          </ul>
-        </p>
-        <p class="footer center"><a href="../index.fr.htm">Accueil</a> | <a href="../contact.fr.htm">Contact</a> | <a href="../sitemap.fr.htm">Plan du site</a></p>
-        <p class="center" id="lastupdate">Dernière mise à jour : 24 janvier 2014</p>
-      </div>
-    </div>
-  </body>
+<\!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; URL=../index.html">
+    <link rel="canonical" href="../index.html">
+    <title>Redirect - Mehdi Bouaziz</title>
+</head>
+<body>
+    <h1>Redirect</h1>
+    <p>You are being redirected to the main page. If this doesn't work automatically, <a href="../index.html">click here</a>.</p>
+    <script>
+        window.location.href = "../index.html";
+    </script>
+</body>
 </html>
