--- a/p/LogozzoBouaziz-FMF2-talk.en.htm
+++ b/p/LogozzoBouaziz-FMF2-talk.en.htm
@@ -1,39 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Content-Language" content="en" />
-    <link rel="stylesheet" type="text/css" href="../s.css" />
-    <meta name="citation_title" content="Spécification et vérification de programmes avec CodeContracts" />
-    <meta name="citation_author" content="Francesco Logozzo" />
-    <meta name="citation_author" content="Bouaziz, Mehdi" />
-    <meta name="citation_publication_date" content="2013/06/28" />
-    <meta name="citation_pdf_url" content="http://www.bouaziz.me/p/LogozzoBouaziz-FMF2-slides.pdf" />
-    <title>Spécification et vérification de programmes avec CodeContracts - Francesco Logozzo and Mehdi Bouaziz</title>
-  </head>
-  <body class="pub">
-    <div class="otherlangs">
-      <ul>
-        <li>
-          <a href="LogozzoBouaziz-FMF2-talk.fr.htm" rel="alternate" hreflang="fr" xml:lang="fr" lang="fr">Version française</a>
-        </li>
-      </ul>
-    </div>
-    <div class="page">
-      <div class="content">
-        <h2 class="citation_author"><a href="http://research.microsoft.com/en-us/people/logozzo/" class="people">Francesco Logozzo</a> and Mehdi Bouaziz</h2>
-        <h1 class="citation_title">Spécification et vérification de programmes avec CodeContracts</h1>
-        <h3><i><a href="http://projects.laas.fr/IFSE/FMF/J2">2<sup>e</sup> Forum méthodes formelles (FMF 2013)</a></i>, <a href="http://www.laas.fr" class="place">Laboratoire d'Analyse et d'Architecture des Systèmes</a>, Toulouse, France. June 28, 2013</h3>
-        <p>
-          <ul class="bigarrows">
-            <li><a href="LogozzoBouaziz-FMF2-slides.pdf">PDF</a>, 42 pages, 634 KB</li>
-            <li>@misc{LogozzoBouaziz-FMF2-talk,<br />  author = {Francesco Logozzo and Bouaziz, Mehdi},<br />  title = {Spécification et vérification de programmes avec CodeContracts},<br />  year = {2013},<br />  month = {June},<br />  booktitle = {2e Forum méthodes formelles (FMF 2013)},<br />  institution = {Laboratoire d'Analyse et d'Architecture des Systèmes},<br />  url = {http://www.bouaziz.me/p/LogozzoBouaziz-FMF2-slides.pdf}<br />}</li>
-          </ul>
-        </p>
-        <p class="footer center"><a href="../index.en.htm">Home</a> | <a href="../contact.en.htm">Contact</a> | <a href="../sitemap.en.htm">Site map</a></p>
-        <p class="center" id="lastupdate">Last update: January 24, 2014</p>
-      </div>
-    </div>
-  </body>
+<\!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; URL=../index.html">
+    <link rel="canonical" href="../index.html">
+    <title>Redirect - Mehdi Bouaziz</title>
+</head>
+<body>
+    <h1>Redirect</h1>
+    <p>You are being redirected to the main page. If this doesn't work automatically, <a href="../index.html">click here</a>.</p>
+    <script>
+        window.location.href = "../index.html";
+    </script>
+</body>
 </html>
