--- a/sitemap.htm
+++ b/sitemap.htm
@@ -1,132 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Content-Language" content="en" />
-    <link rel="stylesheet" type="text/css" href="s.css" />
-    <title>Site map [Mehdi Bouaziz]</title>
-  </head>
-  <body class="generic">
-    <div class="otherlangs">
-      <ul>
-        <li>
-          <a href="sitemap.fr.htm" rel="alternate" hreflang="fr" xml:lang="fr" lang="fr">Version française</a>
-        </li>
-      </ul>
-    </div>
-    <div class="page">
-      <div class="content">
-        <h1>Site map</h1>
-        <p>
-          <ul>
-            <li>
-              <a href="index.en.htm">Home</a>
-              <ul>
-                <li>
-                  <a href="me.en.htm">About me</a>
-                </li>
-                <li>
-                  <a href="contact.en.htm">Contact</a>
-                </li>
-                <li>
-                  <a href="pubs.en.htm">Publications</a>
-                  <ul>
-                    <li>
-                      <a href="p/BarnettBouazizFahndrichLogozzo-Bytecode13.en.htm">A case for static analyzers in the cloud</a>
-                    </li>
-                    <li>
-                      <a href="p/BouazizLogozzoFahndrich-APLAS12.en.htm">Inference of Necessary Field Conditions with Abstract Interpretation</a>
-                    </li>
-                    <li>
-                      <a href="p/Bouaziz-NSAD12.en.htm">TreeKs: A Functor to Make Numerical Abstract Domains Scalable</a>
-                    </li>
-                    <li>
-                      <a href="p/Bouaziz-SIT11.en.htm">Jsx: a symbolic evaluator for JavaScript</a>
-                    </li>
-                    <li>
-                      <a href="p/Bouaziz-ENS10.en.htm">TreeKs: un foncteur pour faire passer les domains numériques à l'échelle</a>
-                    </li>
-                    <li>
-                      <a href="p/BarbinBouaziz-MLstate09.en.htm">A Unified Library of Primitives for QML Compilers and Interpreters</a>
-                    </li>
-                    <li>
-                      <a href="p/Bouaziz-MLstate09.en.htm">Optimized Client-Server Distribution of Ajax Web Applications</a>
-                    </li>
-                    <li>
-                      <a href="p/Bouaziz-MLstate08.en.htm">Approximation statique de propriétés d'applications web</a>
-                    </li>
-                    <li>
-                      <a href="p/all.bib">all.bib</a>
-                    </li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="talks.en.htm">Talks</a>
-                  <ul>
-                    <li>
-                      <a href="p/Bouaziz-ECNU13-talk.en.htm">CodeContracts &amp; Clousot</a>
-                    </li>
-                    <li>
-                      <a href="p/Bouaziz-AVDCPS13-talk.en.htm">Scalable Numerical Abstact Domains</a>
-                    </li>
-                    <li>
-                      <a href="p/LogozzoBouaziz-FMF2-talk.en.htm">Spécification et vérification de programmes avec CodeContracts</a>
-                    </li>
-                    <li>
-                      <a href="p/BarnettBouazizFahndrichLogozzo-Bytecode13-talk.en.htm">A Case for Static Analyzers in the Cloud</a>
-                    </li>
-                    <li>
-                      <a href="p/BouazizLogozzoFahndrich-APLAS12-talk.en.htm">Inference of Necessary Field Conditions with Abstract Interpretation</a>
-                    </li>
-                    <li>
-                      <a href="p/BouazizLogozzo-MSR12-talk.en.htm">Cloudot: Lifting Clousot into the Cloud</a>
-                    </li>
-                    <li>
-                      <a href="p/Bouaziz-NSAD12-talk.en.htm">TreeKs: A Functor to Make Numerical Abstract Domains Scalable</a>
-                    </li>
-                    <li>
-                      <a href="p/Bouaziz-ENS12-talk.en.htm">An Introduction to Computer Security</a>
-                    </li>
-                    <li>
-                      <a href="p/BouazizLogozzo-MSR11-talk.en.htm">Some Improvements to CodeContracts</a>
-                    </li>
-                    <li>
-                      <a href="p/BouazizBounimova-MSR11-talk.en.htm">Towards "Continuous SAGE"</a>
-                    </li>
-                    <li>
-                      <a href="p/Bouaziz-MSR11-talk.en.htm">TreeKs: A Functor to Make Numerical Abstract Domains Scalable</a>
-                    </li>
-                    <li>
-                      <a href="p/BouazizChudnovNaumann-SIT11-talk.en.htm">A symbolic evaluator for Javascript</a>
-                    </li>
-                    <li>
-                      <a href="p/Bouaziz-ENS10-talk.en.htm">TreeKs: un foncteur pour faire passer les domains numériques à l'échelle</a>
-                    </li>
-                    <li>
-                      <a href="p/Bouaziz-MLstate09-talk.en.htm">Optimized Client-Server Distribution of Ajax Web Applications</a>
-                    </li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="teaching.en.htm"></a>
-                  <ul></ul>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="sitemap.en.htm">Site map</a>
-              <ul>
-                <li>
-                  <a href="sitemap.xml">sitemap.xml</a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </p>
-        <p class="footer center"><a href="index.en.htm">Home</a> | <a href="contact.en.htm">Contact</a> | <a href="sitemap.en.htm">Site map</a></p>
-        <p class="center" id="lastupdate">Last update: January 24, 2014</p>
-      </div>
-    </div>
-  </body>
+<\!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; URL=index.html">
+    <link rel="canonical" href="index.html">
+    <title>Redirect - Mehdi Bouaziz</title>
+</head>
+<body>
+    <h1>Redirect</h1>
+    <p>You are being redirected to the main page. If this doesn't work automatically, <a href="index.html">click here</a>.</p>
+    <script>
+        window.location.href = "index.html";
+    </script>
+</body>
 </html>
