--- a/talks.htm
+++ b/talks.htm
@@ -1,73 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Content-Language" content="en" />
-    <link rel="stylesheet" type="text/css" href="s.css" />
-    <title>Talks [Mehdi Bouaziz]</title>
-  </head>
-  <body class="generic">
-    <div class="otherlangs">
-      <ul>
-        <li>
-          <a href="talks.fr.htm" rel="alternate" hreflang="fr" xml:lang="fr" lang="fr">Version française</a>
-        </li>
-      </ul>
-    </div>
-    <div class="page">
-      <div class="content">
-        <h1>Talks</h1>
-        <h2>2013</h2>
-        <p><a href="p/Bouaziz-ECNU13-talk.en.htm">CodeContracts &amp; Clousot</a>.
-  <i>Course on Abstract Interpretation</i>, <a href="http://english.ecnu.edu.cn" class="place">East China Normal University</a>, Shanghai, China. November 26, 2013.
-  </p>
-        <p><a href="p/Bouaziz-AVDCPS13-talk.en.htm">Scalable Numerical Abstact Domains</a>.
-  <i>2nd Workshop on Analysis and Verification of Dependable Cyber Physical Software (AVDCPS 2013)</i>, <a href="http://english.nudt.edu.cn" class="place">National University of Defense Technology</a>, Changsha, China. November 23, 2013.
-  <a href="p/Bouaziz-AVDCPS13-slides.pdf">[Slides]</a></p>
-        <p><a href="p/LogozzoBouaziz-FMF2-talk.en.htm">Spécification et vérification de programmes avec CodeContracts</a>.
-  <i><a href="http://projects.laas.fr/IFSE/FMF/J2">2<sup>e</sup> Forum méthodes formelles (FMF 2013)</a></i>, <a href="http://www.laas.fr" class="place">Laboratoire d'Analyse et d'Architecture des Systèmes</a>, Toulouse, France. June 28, 2013.
-  <a href="p/LogozzoBouaziz-FMF2-slides.pdf">[Slides]</a></p>
-        <p><a href="p/BarnettBouazizFahndrichLogozzo-Bytecode13-talk.en.htm">A Case for Static Analyzers in the Cloud</a>.
-  <i><a href="http://costa.ls.fi.upm.es/bytecode13/">8th Workshop on Bytecode Semantics, Verification, Analysis, and Transformation (Bytecode 2013)</a></i>, Rome, Italy. March 23, 2013.
-  <a href="p/BarnettBouazizFahndrichLogozzo-Bytecode13-slides.pdf">[Slides]</a></p>
-        <h2>2012</h2>
-        <p><a href="p/BouazizLogozzoFahndrich-APLAS12-talk.en.htm">Inference of Necessary Field Conditions with Abstract Interpretation</a>.
-  <i><a href="http://aplas12.kuis.kyoto-u.ac.jp/">10th Asian Symposium on Programming Languages and Systems (APLAS 2012)</a></i>, Kyoto, Japan. December 12, 2012.
-  <a href="p/BouazizLogozzoFahndrich-APLAS12-slides.pdf">[Slides]</a></p>
-        <p><a href="p/BouazizLogozzo-MSR12-talk.en.htm"><i>Cloud</i>ot: Lifting Clousot into the Cloud</a>.
-  <i>End of internship talk</i>, <a href="http://research.microsoft.com" class="place">Microsoft Research</a>, Redmond, WA, USA. October 12, 2012.
-  <a href="p/BouazizLogozzo-MSR12-slides.pdf">[Slides]</a></p>
-        <p><a href="p/Bouaziz-NSAD12-talk.en.htm"><tt>TreeKs</tt>: A Functor to Make Numerical Abstract Domains Scalable</a>.
-  <i><a href="http://nsad2012.ucombinator.org/">4th International Workshop on Numerical and Symbolic Abstract Domains (NSAD 2012)</a></i>, Deauville, France. September 10, 2012.
-  <a href="p/Bouaziz-NSAD12-slides.pdf">[Slides]</a></p>
-        <p><a href="p/Bouaziz-ENS12-talk.en.htm">An Introduction to Computer Security</a>.
-  <i>Computer Science department meeting</i>, <a href="http://www.di.ens.fr" class="place">École normale supérieure</a>, Paris, France. May 11, 2012.
-  <a href="p/Bouaziz-ENS12-slides.pdf">[Slides]</a></p>
-        <h2>2011</h2>
-        <p><a href="p/BouazizLogozzo-MSR11-talk.en.htm">Some Improvements to CodeContracts</a>.
-  <i>End of internship talk</i>, <a href="http://research.microsoft.com" class="place">Microsoft Research</a>, Redmond, WA, USA. November 3, 2011.
-  <a href="p/BouazizLogozzo-MSR11-slides.pdf">[Slides]</a></p>
-        <p><a href="p/BouazizBounimova-MSR11-talk.en.htm">Towards "Continuous SAGE"</a>.
-  <i>End of internship talk</i>, <a href="http://research.microsoft.com" class="place">Microsoft Research</a>, Redmond, WA, USA. July 8, 2011.
-  <a href="p/BouazizBounimova-MSR11-slides.pdf">[Slides]</a></p>
-        <p><a href="p/Bouaziz-MSR11-talk.en.htm"><tt>TreeKs</tt>: A Functor to Make Numerical Abstract Domains Scalable</a>.
-  <i>MSR Interns 7-minute talks</i>, <a href="http://research.microsoft.com" class="place">Microsoft Research</a>, Redmond, WA, USA. July 7, 2011.
-  <a href="p/Bouaziz-MSR11-slides.pdf">[Slides]</a></p>
-        <p><a href="p/BouazizChudnovNaumann-SIT11-talk.en.htm">A symbolic evaluator for Javascript</a>.
-  <i>End of internship talk</i>, <a href="http://www.cs.stevens.edu" class="place">Stevens Institute of Technology</a>, Hoboken, NJ, USA. February 25, 2011.
-  <a href="p/BouazizChudnovNaumann-SIT11-slides.pdf">[Slides]</a></p>
-        <h2>2010</h2>
-        <p><a href="p/Bouaziz-ENS10-talk.en.htm"><tt>TreeKs</tt>: <span>un foncteur pour faire passer les domains numériques à l'échelle</span></a>.
-  <i>Masters defense</i>, <a href="http://www.di.ens.fr" class="place">École normale supérieure</a>, Paris, France. September 6, 2010.
-  <a href="p/Bouaziz-ENS10-slides.pdf">[Slides]</a></p>
-        <h2>2009</h2>
-        <p><a href="p/Bouaziz-MLstate09-talk.en.htm">Optimized Client-Server Distribution of Ajax Web Applications</a>.
-  <i>Masters defense</i>, <a href="http://www.di.ens.fr" class="place">École normale supérieure</a>, Paris, France. September 21, 2009.
-  </p>
-        <p class="footer center"><a href="index.en.htm">Home</a> | <a href="contact.en.htm">Contact</a> | <a href="sitemap.en.htm">Site map</a></p>
-        <p class="center" id="lastupdate">Last update: January 24, 2014</p>
-      </div>
-    </div>
-  </body>
+<\!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; URL=index.html">
+    <link rel="canonical" href="index.html">
+    <title>Redirect - Mehdi Bouaziz</title>
+</head>
+<body>
+    <h1>Redirect</h1>
+    <p>You are being redirected to the main page. If this doesn't work automatically, <a href="index.html">click here</a>.</p>
+    <script>
+        window.location.href = "index.html";
+    </script>
+</body>
 </html>
